Fixed some overlapping layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,19 @@ input:-webkit-autofill {
   padding-bottom: 15px
 }
 
+.pad-sides {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.pad-left {
+  padding-left: 5px;
+}
+
+.margin-sides {
+  margin-left: 5px;
+}
+
 #remote-crl {
   display: none;
 }
@@ -94,8 +107,12 @@ input:-webkit-autofill {
   text-align: center;
 }
 
+.txt-left {
+  text-align: left;
+}
+
 .in-line-block {
-  display: inline-block
+  display: inline-block;
 }
 
 .in-line-block-margin-padding {
@@ -112,4 +129,16 @@ input:-webkit-autofill {
 .device-font {
   font-size: 20px;
   color: #003399;
+}
+
+.min-width-200 {
+  min-width: 200px;
+}
+
+.min-width-250 {
+  min-width: 250px;
+}
+
+.btn-group button {
+  margin: 0 5px;
 }
